nearly done MVP

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,23 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual environments
+.venv/
+venv/
+env/
+
+# Project artifacts
+experiments/runs/
+*.csv
+
+# OS files
+.DS_Store
+Thumbs.db
